--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     <section class="jumbotron text-center">
       <img src="./img/profil.jpg" alt="avatar" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">M Nurul Fadhil</h1>
-      <p class="lead">Junior Web Developer <i class="bi bi-laptop text-primary"></i> | Gamer <i class="bi bi-controller text-primary"></i></p>
+      <p class="lead">
+        Junior Web Developer <a href="https://github.com/"><i class="bi bi-laptop"></i></a> | xxxxx <a href="https://www.game.co.uk/"><i class="bi bi-controller"></i></a>
+      </p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#030e12"
