--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css" />
     <!-- javascript -->
     <script src="script.js"></script>
-    <title>Portfolio || Nathan</title>
+    <title>Portfolio || M Nurul Fadhil</title>
   </head>
   <body id="home">
     <!-- Navbar -->
